# langchain

./: .env  .gitignore  README.md  pyproject.toml
autogen_/: README.md  _01.py  _02.py  __init__.py  agent_sample_01.py  assistant_agent_mcp.py  assistant_agent_tool.py  hot_topic_summary_notice.py  magentic_one_sample_01.py  magentic_one_sample_02.py  round_robin_sample_01.py  task_execute.py  userProxy_RoundRobinGroup_game.py  user_proxy_agent.py
base/: base_llm.py  retrival_chain.py
bm25_retriever/: bm25_func.py  bm25_retriever.py
browser_use_/: demo_01.py  pyproject.toml
deep_research/: langchain_deep_research.py
fine_tuning/: remote_machine_test.py
langchain_/: README.md  __init__.py  base_llm.py  llm_graph_rag.py  llm_rag.py  llm_test.py  memory_stu_01.py  memory_stu_01_deprecated.py  memory_stu_02.py  prompts_stu.py  rag_01.py  stream_llm.py  task_chain_stu.py  task_chain_stu_02.py  task_chain_stu_02_deprecated.py  tools_stu_01.py
langgraph_/: README.md  __init__.py  chatbot_stu_01.py  langgraph_ReaAct.ipynb  stu_01.py  stu_02.py
langsmith_/: langsmith_hello.py
llamaindex_/: READMD.md  README.md  __init__.py  demo_01.py
mcp_/: README.md  __init__.py
modelscope_agent/: __init__.py
modelscope_agents/: ecs_tool_invoke.py  ollama_llm.py  requirements.txt
nlp/: README.md  __init__.py
ocr/: paddlel_ocr_test.py  requirements.txt
picture_search/: README.md  __init__.py  extract_vec.py  pic_text_similar.py  picture_deal.py  picture_deal_cn.py  requirements.txt  search_test.py  search_test_cn.py
pytests/: README.md  pytest_stu_01.py
ray_study/: README.md  ray_02.py  ray_03.py  ray_server.py
server/: chat_server_api.py
streamlit_/: __init__.py  chatbot.py  stu_01.py
tokenizer/: tiktoken_token_computer.py  token_computer.py  transformers_token_computer.py
torch_/: README.md  __init__.py  simple_nn.py  test_demo_01.py  train_demo_01.py  visual_demo_01.py
transformer/: qwen3_0.6b.py  (+1 more)
(+44 files in other folders)
