[tool.poetry]
name = "ai-study-project"
version = "0.1.0"
description = "study for ai"
authors = ["gitsilence"]
readme = "README.md"
package-mode = true  # 将项目作为Python包安装

[tool.poetry.dependencies]
python = "^3.10"
llama-index-llms-ollama = "^0.5.0"
llama-index-embeddings-ollama = "^0.5.0"
langchain = "0.3.11"
numpy = "1.26.2"
jinja2 = "2.11.3"
cn-clip = "1.5.1"
langchain-community = "0.3.11"
langchain-core = "0.3.24"
langchain-ollama = "0.2.1"
langchain-text-splitters = "0.3.2"
llama-index = "0.12.5"
netifaces = "0.11.0"
onnxruntime = "1.20.1"
pillow = "11.0.0"
pydantic = "2.10.3"
ray = "2.40.0"
sqlalchemy = "2.0.36"
torch = "2.5.1"
transformers = "4.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
