[tool.poetry]
name = "ai-study-project"
version = "0.1.0"
description = "study for ai"
authors = ["gitsilence"]
readme = "README.md"
package-mode = true  # 将项目作为Python包安装

[tool.poetry.dependencies]
python = "^3.10"
llama-index-llms-ollama = "^0.5.0"
llama-index-embeddings-ollama = "^0.5.0"
langchain = "^0.3.18"
numpy = ">=1.26.4,<2.0"
jinja2 = "2.11.3"
cn-clip = "1.5.1"
langchain-community = "^0.3.17"
langchain-core = "^0.3.34"
langchain-ollama = "0.2.1"
langchain-text-splitters = "^0.3.6"
llama-index = "0.12.5"
netifaces = "0.11.0"
onnxruntime = "1.20.1"
pillow = "11.0.0"
pydantic = "2.10.3"
ray = "2.40.0"
sqlalchemy = "2.0.36"
torch = "2.5.1"
transformers = "4.47.0"
llama-index-llms-langchain = "^0.5.0"
modal = "^0.68.18"
langgraph = "^0.2.60"
streamlit = "^1.41.1"
plotly = "^5.24.1"
bokeh = "2.4.3"
chromadb = "^0.6.3"
langchain-chroma = "^0.2.2"
langchain-experimental = "^0.3.4"
docx2txt = "^0.8"
markupsafe = "2.0.1"
uvicorn = "^0.34.0"
weaviate-client = "3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
